# delta

./: CMakeLists.txt  README.md  todo.txt
helpers/: invalid.h  io.h  propagation.h  stochastic.h
jl/src/: Delta.jl  belief.jl  example.jl  generate.jl  machine.jl  socket.jl  util.jl  vis.jl
jl/src/machines/: composite.jl  group.jl  mover.jl  source.jl  worker.jl
jl/test/: belief.jl  machine.jl  socket.jl
machines/: machines.h  naming.h  primitives.h  sockets.h
primitives/: types.h  values.h
scripts/: CMakeLists.txt  interpret.cpp  interpret.h
sigmacodes/: test.sg
tex/: main.aux  main.out
tex/Chapters/: Chapter02.aux  Chapter02.tex
